projects/some_project/reports/first_suite/2019.11.05.12.52.25.921/order_capturing/set_d4b13a/execution_debug.log
2019-11-05 12:52:25,933 root INFO Test execution started: order_capturing
2019-11-05 12:52:25,934 root INFO Browser: chrome
2019-11-05 12:52:25,934 root INFO Environment: test_env
2019-11-05 12:52:25,934 root INFO Using data:
    doc_group: REAL PROPERTY
    doc_type: ABANDONMENT
    url: http://{}:{}@10.0.1.73:8001/69999/?ReturnUrl=https://crs.qa.kofile.com/69999/Account/ReturnClaim&amp;Referrer=
2019-11-05 12:52:25,946 root ERROR SyntaxError: EOL while scanning string literal
Traceback (most recent call last):
  File "C:\Users\alexandr.may\testdir\projects\some_project\actions_helper\my_actions.py", line 7
    actions.execute_javascript('
                               ^
SyntaxError: EOL while scanning string literal

2019-11-05 12:52:25,947 root INFO Test Result: CODE ERROR
